samples/_failures_safe/1761498448_b4f933_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_414d74ef.c: In function ‘main’:
./samples/SAFE/__tmp_414d74ef.c:153:5: error: expected declaration or statement at end of input
  153 |     if (unique_count == 0) {
      |     ^~
./samples/SAFE/__tmp_414d74ef.c:153:5: error: expected declaration or statement at end of input
